--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,29 @@
 version: "3.9"
+
 services:
-  ai-research-assistant:
+  api:
     build: .
+    container_name: agentsphere-api
     ports:
       - "8000:8000"
-    env_file:
-      - .env
+    environment:
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    volumes:
+      - .:/app
+    command: >
+      uvicorn api.main:app --host 0.0.0.0 --port 8000
+
+  ui:
+    build: .
+    container_name: agentsphere-ui
+    ports:
+      - "8501:8501"
+    depends_on:
+      - api
+    environment:
+      - BASE_URL=http://api:8000
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+    volumes:
+      - .:/app
+    command: >
+      streamlit run ui/app.py --server.port=8501 --server.address=0.0.0.0
